...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/profile_avatar"
...
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="0.01"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileButtonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="7"
...
