<resources>
    <string name="app_name">AllergenDetector</string>
    <string name="title_lists">Lists</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="profile_name_default_placeholder">Default Profile Name Placeholder</string>
    <string name="profile_button_allergens">Allergens</string>
    <string name="profile_button_settings">Settings</string>
    <string name="profile_button_statistics">Statistics</string>
    <string name="profile_button_metrics">Metrics</string>
    <string name="profile_button_educational_tips">Educational Tips</string>
    <string name="placeholder">Placeholder</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="edit_allergen">Edit Allergen</string>
    <string name="remove_allergen">Remove Allergen</string>
    <string name="allergen_severity">Allergen severity</string>
    <string name="title_allergen_list">Allergen List</string>
    <string name="title_photo">Photo</string>
    <string name="retake_button">Retake</string>
    <string name="use_button">Use</string>
    <string name="title_result">Scan Result</string>
    <string name="title_result_det">Detection Result</string>
    <string name="return_button">Return</string>
    <string name="proceed_button">Proceed</string>
    <string name="crop_button">Crop</string>
    <string name="edit_button">Edit</string>
    <string name="image_description">Resulting image of the scan</string>
    <string name="title_edit_text">Edit Text</string>
    <string name="share_button">Share</string>
    <string name="save_button">Save</string>
    <string name="add_allergen">Add Allergen</string>
    <string name="go_back">Go Back</string>
    <string name="logout">Logout</string>
    <string name="allergen">Allergen</string>
    <string name="mild">Mild</string>
    <string name="severe">Severe</string>
    <string name="edit_button">Edit</string>
    <string name="image_description">Resulting image of the scan</string>
    <string name="title_edit_text">Edit Text</string>
    <string name="share_button">Share</string>
    <string name="save_button">Save</string>
</resources>