...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.DetectionResultFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/textToSpeechButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="?android:selectableItemBackground"
        android:backgroundTint="@color/purple_200"
        android:clickable="true"
...

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/textViewResult"
...
            android:textAlignment="center"
            android:textSize="20sp"
            tools:listitem="@layout/harmful_item" />
    </ScrollView>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        android:text="@string/share_button"
...
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/returnButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shareButton" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="100dp"
...
