...
    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/image_capture_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:elevation="1dp"
        android:background="@drawable/baseline_camera_24"
        android:padding="0dp"
...
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners"
        android:drawableTop="@drawable/baseline_question_mark_24"
        android:layout_marginTop="80dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toStartOf="@+id/recentScanButton"
        app:layout_constraintStart_toEndOf="@+id/openGalleryButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openGalleryButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
...
